# trajopt

./: .clang-format  .clang-tidy  .cmake-format  .github_actions.yml  .gitmodules  .run-clang-format  .run-cmake-format  .run-cpack  .travis.yml  CLAUDE.md  CMakeLists.txt  PERF_BRIEF_TRAJOPT_IFOPT.md  README.md  ci  ci.diff  dependencies.repos  dependencies.rosinstall  dependencies_unstable.repos  dependencies_with_ext.rosinstall  package.xml
tesseract/tesseract_collision/: CMakeLists.txt  package.xml  tesseract_collision_bullet_plugin_description.xml
tesseract/tesseract_core/: CMakeLists.txt  package.xml
tesseract/tesseract_monitoring/: CMakeLists.txt  package.xml
tesseract/tesseract_msgs/: CMakeLists.txt  package.xml
trajopt/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
trajopt/cmake/: trajopt-config.cmake.in
trajopt/data/: 3link_pushing.env.xml  arm_around_table.json  box_cast_test.json  carbot.xml  cargapprob.env.xml  jagged_narrow.xml  kitchen.env.xml  needlebot.xml  needleprob.env.xml  numerical_ik1.json  point_normal1.json  pr2-door.env.xml  pr2_lifting.env.xml  pr2_table.env.xml  test2.env.xml
trajopt/scripts/: gen_operations_code.py  generate_fwd_header.py  make_sco_fwd_header.sh  plot_optimization.py  source_analysis.py  traj_compare.py  traj_graph.py
trajopt/src/: bullet_collision_checker.cpp  collision_checker.cpp  collision_terms.cpp  configuration_space.cpp  file_write_callback.cpp  json_marshal.cpp  kinematic_terms.cpp  plot_callback.cpp  problem_description.cpp  rave_utils.cpp  ros_env.cpp  ros_kin.cpp  ros_kin_chain.cpp  traj_plotter.cpp  trajectory_costs.cpp  trajoptpy.cpp  typedefs.cpp  utils.cpp  voxel_collision_checker.cpp
trajopt/test/: CMakeLists.txt  angular_constraint_unit.cpp  angular_constraint_unit.launch  basic_cartesian_plan_aligned_axis.json  basic_cartesian_plan_confined_axis.json  basic_cartesian_plan_conical_axis.json  cart_position_optimization_unit.cpp  cast-cost-unit.cpp  cast_constraint_octomap_unit.cpp  cast_cost_attached_unit.cpp  cast_cost_attached_unit.launch  cast_cost_octomap_arm_unit.cpp  cast_cost_octomap_unit.cpp  cast_cost_octomap_unit.launch  cast_cost_unit.cpp  cast_cost_unit.launch  cast_cost_world_unit.cpp  cast_cost_world_unit.launch  collision-checker-unit.cpp  costs_unit.cpp  costs_unit.launch  interface_unit.cpp  interface_unit.launch  joint_costs_unit.cpp  json_experiment1.cpp  json_experiment2.cpp  kinematic_costs_unit.cpp  numerical_ik_unit.cpp  planning-unit.cpp  planning-unit.launch  planning_unit.cpp  planning_unit.launch  planning_unit.rviz  planning_unit_numerical_ik_correct_results.txt  render_collision_test.cpp  simple_collision_unit.cpp  test_initializations.py  trajopt_test_utils.hpp  visualization.rviz
trajopt_common/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
trajopt_common/cmake/: trajopt_common-config.cmake.in  trajopt_macros.cmake
trajopt_common/data/: arm_around_table.urdf  box_1m_macro.xacro  boxbot.srdf  boxbot.urdf  boxbot.xacro  boxbot_cylinder_world.urdf  boxbot_macro.xacro  boxbot_world.urdf  boxbot_world.xacro  contact_manager_plugins.yaml  pr2.srdf  pr2.urdf  pr2_plugins.yaml  spherebot.srdf  spherebot.urdf
trajopt_common/src/: clock.cpp  collision_types.cpp  collision_utils.cpp  config.cpp  logging.cpp  stl_to_string.cpp  utils.cpp
trajopt_common/test/: CMakeLists.txt  collision_types_tests.cpp  name_id_testing.h  trajopt_common_cache_tests.cpp  trajopt_common_yaml_conversions_tests.cpp
trajopt_examples/: CMakeLists.txt  package.xml
trajopt_examples/config/: basic_cartesian_plan.json  car_seat_demo.srdf  glass_up_right_plan.json  kuka_lbr_iiwa_14_r820.srdf  puzzle_piece_workcell.srdf
trajopt_examples/launch/: basic_cartesian_plan.launch  car_seat_demo.launch  glass_up_right_plan.launch  load_kuka.launch  pick_and_place_plan.launch  puzzle_piece_auxillary_axes_plan.launch  puzzle_piece_plan.launch  raster_path_plan.launch
trajopt_examples/src/: basic_cartesian_plan.cpp  car_seat_demo.cpp  glass_up_right_plan.cpp  pick_and_place_plan.cpp  puzzle_piece_auxillary_axes_plan.cpp  puzzle_piece_plan.cpp  raster_path_plan.cpp
trajopt_examples/test/: basic_cartesian_plan.test  car_seat_demo.test  glass_up_right_plan.test  pick_and_place_plan.test  puzzle_piece_auxillary_axes_plan.test  puzzle_piece_plan.test
trajopt_examples/urdf/: car_seat_demo.xacro  car_seat_demo_macro.xacro  environment.xacro  grinder.xacro  lbr_iiwa_14_r820.xacro  pick_and_place_plan.xacro  puzzle_piece_workcell.xacro
trajopt_ext/: CMakeLists.txt  package.xml
trajopt_ext/bullet/: CMakeLists.txt
trajopt_ext/ext/: CMakeLists.txt
trajopt_ext/nlopt/: CMakeLists.txt  package.xml
trajopt_ext/osqp/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml  patch_osqp.cmake
trajopt_ext/osqp_eigen/: CHANGELOG.rst  CMakeLists.txt  package.xml
trajopt_ext/pagmo/: CMakeLists.txt  package.xml
trajopt_ext/qpoases/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml  patch_qpoases.cmake
trajopt_ext/vhacd/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
trajopt_ext/vhacd_ros/: CMakeLists.txt  package.xml
trajopt_ifopt/: CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  package.xml
trajopt_ifopt/cmake/: trajopt_ifopt-config.cmake.in
trajopt_ifopt/examples/: cart_position_example.cpp  cart_position_example_trajopt_sco.cpp  joint_position_example.cpp  position_example.cpp  velocity_smoother.cpp
trajopt_ifopt/ifopt/: CMakeLists.txt
trajopt_ifopt/src/: absolute_cost.cpp  cartesian_line_constraint.cpp  cartesian_position_constraint.cpp  squared_cost.cpp  (+16 more)
trajopt_moveit/: CMakeLists.txt  moveit_collision_detection_bullet_plugin_description.xml  package.xml
trajopt_moveit_examples/: CMakeLists.txt  package.xml
trajopt_osgviewer/: CMakeLists.txt  package.xml
trajopt_scene/: CMakeLists.txt  package.xml
trajopt_sco/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
trajopt_test_support/: CMakeLists.txt  package.xml
trajopt_tools/: CMakeLists.txt  colcon.pkg  package.xml
trajopt_utils/: CHANGELOG.rst  CMakeLists.txt  colcon.pkg  package.xml
(+1110 files in other folders)
