<?xml version="1.0"?>
<package format="2">
  <name>trajopt</name>
  <version>0.1.0</version>
  <description>The trajopt package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>
  <author>John Schulman</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_visualization</depend>
  <depend>trajopt_sco</depend>
  <depend>trajopt_utils</depend>
  <depend>boost</depend>

  <test_depend>benchmark</test_depend>
  <test_depend>gtest</test_depend>
  <test_depend>libpcl-all-dev</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
